--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
 
 apply plugin: 'application'
 mainClassName = "edu.handong.csee.java.hw3.ChatMessageCounter"
+
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
@@ -24,10 +25,16 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     
     // https://mvnrepository.com/artifact/org.apache.commons/commons-csv
-	//compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
+	compile group: 'org.apache.commons', name: 'commons-csv', version: '1.5'
 	
 	// https://mvnrepository.com/artifact/com.opencsv/opencsv
 	compile group: 'com.opencsv', name: 'opencsv', version: '4.1'
+	
+	// https://mvnrepository.com/artifact/commons-cli/commons-cli
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
 	
     
 }
